<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginLayout"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.danielnimafa.android.appongkir.view.custom.FontCustomTextView
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="King Cost"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_app"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputEdUname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edUname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/str_username"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:minHeight="40dp" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorPrimary" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/str_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:minHeight="40dp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/bt_visible"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignBottom="@+id/edPasswordLayout"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="12dp"
                        android:layout_marginRight="4dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_show" />

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/bt_invisible"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignBottom="@+id/edPasswordLayout"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="12dp"
                        android:layout_marginRight="4dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_hide"
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/loginBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="56dp"
            android:text="Login"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>